# model-registry-dapp

./: .gitignore  hardhat.config.js  package-lock.json  package.json  pyproject.toml
api/: main.py
contracts/: ModelRegistry.sol
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AlertMessage.jsx  LoadingSpinner.jsx  ModelDetailsModal.jsx  Spinners.jsx
frontend/src/schemas/: model.js
frontend/src/utils/: api.js
scripts/: deploy.js
src/model_registry_dapp/: __init__.py
src/model_registry_dapp/api/: main.py  routes.py  schemas.py
src/model_registry_dapp/config/: settings.py
src/model_registry_dapp/core/: blockchain.py
test/: ModelRegistry.test.js  ModelRegistry.text.js
tests/: conftest.py
tests/api/: test_models.py
